# Catalyzer

./: Cargo.toml  LICENSE  README.md  catalyzer.rs  crates.js  help.html  search-index.js  settings.html
.github/patches/: index.html.patch  patcher.rs  sidebar-items.js.patch
.github/scripts/: publish_all.py
.github/workflows/: doc.yml
catalyzer/: all.html  attr.delete.html  attr.get.html  attr.head.html  attr.main.html  attr.options.html  attr.patch.html  attr.post.html  attr.put.html  attr.trace.html  index.html  macro.App!.html  macro.App.html  macro.catalyze!.html  macro.catalyze.html  sidebar-items.js  struct.App.html  struct.CatalyzerError.html  type.Result.html
catalyzer-core/: Cargo.toml  error.rs  lib.rs  runtime.rs
catalyzer-core/app/: launch.rs  mod.rs  service.rs
catalyzer-core/app/launch/: 404.html  default.html  default.rs
catalyzer-core/internals/: content_loader.rs  handlers.rs  mod.rs  runtime.rs
catalyzer-core/request/: mod.rs  state.rs
catalyzer-core/response/: builtins.rs  html.rs  mod.rs
catalyzer-macros/: Cargo.toml  app.rs  lib.rs  main_func.rs  routes.rs
catalyzer-utils/: Cargo.toml  lib.rs
catalyzer/__internals__/: enum.InnerCatalyzerError.html  index.html  sidebar-items.js  struct.AxumRouter.html  struct.CatalyzedApp.html  struct.CatalyzerRuntime.html  struct.CatalyzerRuntimeBuilder.html  struct.Method.html  trait.AxumHandler.html  trait.HandlerMetadata.html
catalyzer/__internals__/content_loader/: index.html  sidebar-items.js  struct.BytesContentLoader.html  struct.StringContentLoader.html
catalyzer/__internals__/crates/: index.html  sidebar-items.js
catalyzer/__internals__/crates/axum/: attr.async_trait.html  fn.serve.html  index.html  sidebar-items.js  struct.Error.html  struct.Extension.html  struct.Form.html  struct.Json.html  struct.Router.html  trait.RequestExt.html  trait.RequestPartsExt.html  trait.ServiceExt.html  type.BoxError.html
catalyzer/__internals__/crates/axum/body/: fn.to_bytes.html  index.html  struct.Body.html  struct.BodyDataStream.html  struct.Bytes.html  trait.HttpBody.html
catalyzer/__internals__/crates/axum/error_handling/: index.html  struct.HandleError.html  struct.HandleErrorLayer.html
catalyzer/__internals__/crates/axum/extract/: index.html  struct.ConnectInfo.html  struct.DefaultBodyLimit.html  struct.Extension.html  struct.Form.html  struct.Host.html  struct.Json.html  struct.MatchedPath.html  struct.NestedPath.html  struct.OriginalUri.html  struct.Path.html  struct.Query.html  struct.RawForm.html  struct.RawPathParams.html  struct.RawQuery.html  struct.State.html  trait.FromRef.html  trait.FromRequest.html  trait.FromRequestParts.html  type.Request.html
catalyzer/__internals__/crates/axum/handler/: index.html  struct.HandlerService.html  struct.Layered.html  trait.Handler.html  trait.HandlerWithoutStateExt.html
catalyzer/__internals__/crates/axum/http/: index.html  struct.Error.html  struct.Extensions.html  struct.HeaderMap.html  struct.HeaderName.html  struct.HeaderValue.html  struct.Method.html  struct.Request.html  struct.Response.html  struct.StatusCode.html  struct.Uri.html  struct.Version.html  type.Result.html
catalyzer/__internals__/crates/axum/middleware/: fn.from_extractor.html  fn.from_extractor_with_state.html  fn.from_fn.html  fn.from_fn_with_state.html  fn.map_request.html  fn.map_request_with_state.html  fn.map_response.html  fn.map_response_with_state.html  index.html  struct.AddExtension.html  struct.FromExtractor.html  struct.FromExtractorLayer.html  struct.FromFn.html  struct.Next.html  (+6 more)
catalyzer/__internals__/crates/tokio/: attr.main.html  attr.test.html  fn.spawn.html  index.html  macro.join.html  macro.pin.html  macro.select.html  macro.task_local.html  macro.try_join.html
catalyzer/__internals__/crates/tower/: fn.service_fn.html  index.html  struct.ServiceBuilder.html  trait.Layer.html  trait.MakeService.html  trait.Service.html  trait.ServiceExt.html  type.BoxError.html
catalyzer/__internals__/runtime/: index.html  struct.CatalyzerRuntime.html  struct.CatalyzerRuntimeBuilder.html
catalyzer/internals/: enum.InnerCatalyzerError.html  index.html  sidebar-items.js  struct.AxumRouter.html  struct.CatalyzedApp.html  struct.CatalyzerRuntime.html  struct.CatalyzerRuntimeBuilder.html  struct.InnerCatalyzerIoError.html  struct.Method.html  trait.AxumHandler.html  trait.CatalyzerService.html  trait.HandlerMetadata.html  trait.OptionExt.html  trait.ResultExt.html  trait.TowerService.html
catalyzer/internals/content_loader/: index.html  struct.BytesContentLoader.html  struct.StringContentLoader.html
catalyzer/internals/crates/: index.html
catalyzer/internals/crates/axum/: attr.async_trait.html  fn.serve.html  index.html  struct.Error.html  struct.Extension.html  struct.Form.html  struct.Json.html  struct.Router.html  trait.RequestExt.html  trait.RequestPartsExt.html  trait.ServiceExt.html  type.BoxError.html
catalyzer/internals/crates/tokio/: attr.main.html  attr.test.html  fn.spawn.html  index.html  macro.join.html  macro.pin.html  macro.select.html  macro.task_local.html  macro.try_join.html
catalyzer/internals/crates/tower/: fn.service_fn.html  index.html  struct.ServiceBuilder.html  trait.Layer.html  trait.MakeService.html  trait.Service.html  trait.ServiceExt.html  type.BoxError.html
catalyzer/internals/runtime/: index.html  sidebar-items.js  struct.CatalyzerRuntime.html  struct.CatalyzerRuntimeBuilder.html
catalyzer/req/: index.html  sidebar-items.js  struct.State.html  type.RawRequest.html
catalyzer/res/: index.html  sidebar-items.js  struct.Binary.html  struct.Css.html  struct.Html.html  struct.Js.html  struct.Json.html  struct.Text.html  struct.Xml.html  trait.IntoRawResponse.html  type.RawResponse.html
examples/builtin-default/: Cargo.toml  main.rs
examples/hello-world/: Cargo.toml  index.html  main.rs
search.desc/catalyzer/: catalyzer-desc-0-.js  catalyzer-desc-1-.js
trait.impl/catalyzer/res/: trait.IntoRawResponse.js
type.impl/alloc/boxed/: struct.Box.js
type.impl/core/result/: enum.Result.js
type.impl/std/: primitive.u32.js
(+1176 files in other folders)
