[workspace]
resolver = "2"
members = [
    # Catalyzer
    "catalyzer-*",
    ".",

    # Examples
    "examples/*"
]

[workspace.package]
edition = "2021"
version = "0.1.2"
authors = [
    "Матвей Т <https://matveit.dev> AtomicGamer9523@github"
]
keywords = [
    "rest", "async", "non-blocking", "server", "framework"
]
homepage = "https://matveit.dev/projects/catalyzer"
repository = "https://github.com/AtomicGamer9523/Catalyzer"
categories = ["asynchronous", "network-programming"]
license-file = "LICENSE"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.lints.rust]
unused = "warn"
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
tower = "0.4"
axum = "0.7"
quote = "1"
log = "0.4"

[package]
name = "catalyzer"
description = "HTTP server framework"
edition.workspace = true
version.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license-file.workspace = true
exclude = ["examples", ".github", ".gitignore"]

[lib]
path = "catalyzer.rs"

[dependencies.base]
package = "catalyzer-core"
path = "catalyzer-core"
default-features = false
version = "0.1.0"

[dependencies.macros]
package = "catalyzer-macros"
path = "catalyzer-macros"
version = "0.1.0"

[features]
default = ["builtin-logger"]

builtin-logger = ["base/builtin-logger"]

[lints]
workspace = true
