[package]
name = "catalyzer-core"
description = "Core of Catalyzer"
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true

[lib]
path = "lib.rs"

[dependencies.utils]
package = "catalyzer-utils"
path = "../catalyzer-utils"

[dependencies.logger]
package = "simple_logger"
version = "4"

[dependencies.axumextras]
package = "axum-extra"
version = "0.9"
optional = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
tower.workspace = true
axum.workspace = true
log.workspace = true

[features]
default = ["file-loading-dynamic", "automatic-defaults"]

file-loading-dynamic = []
file-loading-embed = []

more-content-types = []

cookies = ["dep:axumextras", "axumextras/cookie"]
cookies-private = ["cookies", "axumextras/cookie-private"]
cookies-signed = ["cookies", "axumextras/cookie-signed"]

automatic-defaults = []
