[package]
name = "catalyzer-core"
description = "Core of Catalyzer"
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true

[lib]
name = "catalyzer"
path = "lib.rs"

[dependencies.utils]
package = "catalyzer-utils"
path = "../catalyzer-utils"

[dependencies.axumextras]
package = "axum-extra"
version = "0.9"
optional = true

[dependencies.builtin_logger]
package = "simple_logger"
version = "4"
optional = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
tower.workspace = true
axum.workspace = true
log.workspace = true

[features]
default = ["builtin-logger"]

builtin-logger = ["dep:builtin_logger"]
