[package]
name = "catalyzer-macros"
description = "Macros to make life easier"
edition.workspace = true
version.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license-file.workspace = true

[lib]
proc-macro = true
path = "lib.rs"

[lints]
workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
