[package]
name = "catalyzer-utils"
description = "Utilities to make development easier"
edition.workspace = true
version.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license-file.workspace = true

[lib]
path = "lib.rs"

[lints]
workspace = true
